PROJECT(calgorithms)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
MESSAGE(STATUS "#########################")
SET(CMAKE_BUILD_TYPE Release)
ADD_DEFINITIONS(-std=c++11 -g -Wall )

INCLUDE_DIRECTORIES(
${PROJECT_SOURCE_DIR}
)
FILE(GLOB ALL_CXX_SRCS
        ./*.cpp
        )
		
ADD_EXECUTABLE(${PROJECT_NAME} ${ALL_CXX_SRCS} )


TARGET_LINK_LIBRARIES(${PROJECT_NAME} )
