PROJECT(csort)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
MESSAGE(STATUS "#########################")
SET(CMAKE_BUILD_TYPE Release)
ADD_DEFINITIONS(-g -Wall )

INCLUDE_DIRECTORIES(
        ${PROJECT_SOURCE_DIR}
)
FILE(GLOB ALL_CXX_SRCS
        ./*.c
        )

ADD_EXECUTABLE(${PROJECT_NAME} ${ALL_CXX_SRCS} )


TARGET_LINK_LIBRARIES(${PROJECT_NAME} )